Mudanças na organização e nas imagens

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="circleStart.png" alt="Logo da Start Game">
+        <img class="cabecalho-imagem" src="imagens/circleStart.png" alt="Logo da Start Game">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item">Start Up - Sobre nós</a>
+            <a class="cabecalho-menu-item">Enquetes</a>
             <a class="cabecalho-menu-item">Comunidade</a>
             <a class="cabecalho-menu-item">Contato</a>
-
         </nav>
     </header>
 
@@ -27,19 +27,34 @@
                 <h2 class="conteudo-principal-escrito-subtitulo">Entre neste imerso mundo Geek!</h2>
                 <button class="conteudo-principal-escrito-botao"><strong>Quero Fazer Parte!</strong></button>
             </div>
-            <img class="conteudo-principal-imagem" src="logoStart.png" alt="Logo da Start - Game">
+            <img class="conteudo-principal-imagem" src="imagens/logoStart.png" alt="Foto sobre start-ups a direita">
         </section>
         <section class="conteudo-secundario">
             <h3 class="conteudo-secundario-titulo">Sobre Nós</h3>
             <p class="conteudo-secundario-paragrafo">A empresa <strong>Start Game</strong> Tem como objetivo encontrar oportunidades no mercado de games para dar início a projetos lucrativos através de pesquisas no </br>universo de ANIMES.</p>
+            <img class="conteudo-secundario-imagem" src="imagens/fotoStart.png" alt="Logo da Start Game">
             <p class="conteudo-secundario-paragrafo">Como é facilmente perceptível através de redes sociais, televisão e sites de notícias,o mundo dos animes possui uma vasta gama de universos com muitas <br>histórias emocionantes e inteligentes.<br>Visando este ponto, percebemos que há uma grande oportunidade de gerar lucro através da venda de jogos desse gênero (fictício e não realista).</p>
+        </section>
+        <section class="conteudo-enquete">
+            <h2 class="conteudo-enquete-titulo">Enquete</h2>
+            <h4 class="conteudo-enquete-paragrafo">Participe de nossas enquetes clicando aqui.</h4>
+        </section>
+        <section class="conteudo-terciario">
+            <h2 class="conteudo-terciario-titulo">Comunidade</h2>
+            <p class="conteudo-terciario-paragrafo"></p>
+            <p class="conteudo-terciario-paragrafo"></p>
+        </section>
+        <img class="conteudo-terciario-imagem" src="imagens/comunidadeGeek.png" alt="Foto sobre Comunidade a esquerda">
+        <section class="conteudo-quaternario">
+            <h2 class="conteudo-quaternario-titulo">Contato</h2>
+            <h4 class="conteudo-quaternario-email">Contate-nos via email: startupgames@gmail.com</h4>
         </section>
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="logoFace.png" alt="Facebook">
-        <img class="rodape-imagem" src="logoInstagram.png" alt="Instagram">
-        <img class="rodape-imagem" src="logoTwitter.png" alt="Twitter">
+        <img class="rodape-imagem" src="imagens/logoFace.png" alt="Facebook">
+        <img class="rodape-imagem" src="imagens/logoInstagram.png" alt="Instagram">
+        <img class="rodape-imagem" src="imagens/logoTwitter.png" alt="Twitter">
     </footer>
 </body>
 
