--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Divirta-se!!!">
-    <title>Next Stage - A Empresa dos Geek!</title>
+    <title>Home - Next Stage</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -25,7 +25,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Start Game</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Entre neste imerso mundo Geek!</h2>
-                <button class="conteudo-principal-escrito-botao"><strong>Quero Fazer Parte!</strong></button>
+                <button class="conteudo-principal-escrito-botao" onclick="window.location.href='register.html'"><strong>Quero Fazer Parte!</strong></button>
             </div>
             <img class="conteudo-principal-imagem" src="imagens/logoStart.png" alt="Foto sobre start-ups a direita">
         </section>
